# forgottenserver-10.98

./: .gitignore  CMakeLists.txt  config.lua  vcpkg.json
.github/workflows/: build-vcpkg.yml
src/: const.h  definitions.h  game.cpp  house.cpp  luascript.cpp  luascript.h  otserv.cpp  player.cpp  player.h  spawn.cpp
